# pykobold

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yaml
pykobold/: neato.py  robot.py  version.py  vorwerk.py
sample/: sample.py
src/pykobold/: __init__.py  neato.py
